devops-pro/05 kubernetes/22 traefik/app/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`chiarellidev.com`) && Headers(`UserKey`, `teste`)
    kind: Rule
    services:
    - name: nginx-service
      port: 80
    middlewares:
      - name: ratelimit
